// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expense summary snapshot correctly 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;

exports[`should render expense summary snapshot correctly with no data 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $12,312,415.12
  </h1>
</div>
`;
